# python-audit-log

./: .repo-metadata.json  CHANGELOG.md  README.md  noxfile.py  owlbot.py  pyproject.toml  setup.py  synth.metadata
.kokoro/: build.sh  requirements.txt
google/cloud/audit/: audit_log_pb2.py  audit_log_pb2.pyi  bigquery_audit_metadata_pb2.py  bigquery_audit_metadata_pb2.pyi
tests/unit/: test_packaging.py
